--- a/BMS/resources/db.properties
+++ b/BMS/resources/db.properties
@@ -1,12 +1,15 @@
-# 数据库基本配置
+# \u6570\u636E\u5E93\u57FA\u672C\u914D\u7F6E
 driverClassName=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/db1?useUnicode=true&characterEncoding=utf8
 username=root
 password=123456
 
-#连接池配置
+#\u8FDE\u63A5\u6C60\u914D\u7F6E
 initialSize=3
 maxActive=9
 #maxIdle=5
 minIdle=3
 maxWait=5000
+
+#tomcat\u6570\u636E\u6E90\u914D\u7F6E(JNDI)
+jndi=java:comp/env/jdbc/mysql
